<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@android:color/white"
    android:id="@+id/burgerLayout">
    <LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theorie_button1"
        android:id="@+id/lektion_1"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theorie_button2"
        android:id="@+id/lektion_2"
       />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theorie_button3"
        android:id="@+id/lektion_3"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theorie_button4"
        android:id="@+id/lektion_4"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theorie_button5"
        android:id="@+id/lektion_5"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theorie_button6"
        android:id="@+id/lektion_6"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theorie_button7"
        android:id="@+id/lektion_7"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theorie_button8"
        android:id="@+id/lektion_8"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theorie_button9"
        android:id="@+id/lektion_9"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theorie_button10"
        android:id="@+id/lektion_10"/>

    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        app:menu="@menu/burger_menu"
        android:layout_gravity="start"
        app:headerLayout="@layout/burger_header"
        android:id="@+id/test">

    </android.support.design.widget.NavigationView>


</android.support.v4.widget.DrawerLayout>