<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logische_ausdruecke_menu_1"
        android:id="@+id/logische_ausdruecke_menu_1"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logische_ausdruecke_menu_2"
        android:id="@+id/logische_ausdruecke_menu_2"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logische_ausdruecke_menu_3"
        android:id="@+id/logische_ausdruecke_menu_3"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logische_ausdruecke_menu_4"
        android:id="@+id/logische_ausdruecke_menu_4"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logische_ausdruecke_menu_5"
        android:id="@+id/logische_ausdruecke_menu_5"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logische_ausdruecke_menu_6"
        android:id="@+id/logische_ausdruecke_menu_6"/>

</LinearLayout>