<?xml version="1.0" encoding="utf-8"?>


<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:layout_alignParentEnd="true"
    android:layout_marginEnd="11dp"
    android:layout_alignParentRight="true"
    android:layout_marginRight="11dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Datentypen auswählen"
        android:id="@+id/play_lektion_1"/>

        <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Datentypen 2"
        android:id="@+id/play_lektion_2" />

        <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Operatoren"
        android:id="@+id/play_lektion_3"/>

        <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theorie_button4"
        android:id="@+id/play_lektion_4"/>


        <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theorie_button5"
        android:id="@+id/play_lektion_5"/>


        <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theorie_button6"
        android:id="@+id/play_lektion_6"/>


        <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theorie_button7"
        android:id="@+id/play_lektion_7"/>


        <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theorie_button8"
        android:id="@+id/play_lektion_8"/>


        <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theorie_button9"
        android:id="@+id/play_lektion_9"/>


        <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theorie_button10"
        android:id="@+id/play_lektion_10"/>


        <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theorie_button1"
        android:id="@+id/play_lektion_11"/>

        <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theorie_button2"
        android:id="@+id/play_lektion_12" />


        <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theorie_button3"
        android:id="@+id/play_lektion_13"/>


        <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theorie_button4"
        android:id="@+id/play_lektion_14"/>


        <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theorie_button5"
        android:id="@+id/play_lektion_15"/>


        <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theorie_button6"
        android:id="@+id/play_lektion_16"/>


        <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theorie_button7"
        android:id="@+id/play_lektion_17"/>


        <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theorie_button8"
        android:id="@+id/play_lektion_18"/>


        <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theorie_button9"
        android:id="@+id/play_lektion_19"/>


        <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theorie_button10"
        android:id="@+id/play_lektion_20"/>


        <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theorie_button1"
        android:id="@+id/play_lektion_21"/>



        <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theorie_button2"
        android:id="@+id/play_lektion_22"
        />


        <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theorie_button3"
        android:id="@+id/play_lektion_23"/>


        <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theorie_button4"
        android:id="@+id/play_lektion_24"/>


        <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theorie_button5"
        android:id="@+id/play_lektion_25"/>


        <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theorie_button6"
        android:id="@+id/play_lektion_26"/>


        <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theorie_button7"
        android:id="@+id/play_lektion_27"/>


        <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theorie_button8"
        android:id="@+id/play_lektion_28"/>


        <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theorie_button9"
        android:id="@+id/play_lektion_29"/>


        <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theorie_button10"
        android:id="@+id/play_lektion_30"/>

    </LinearLayout>

    </ScrollView>
